--- a/index.html
+++ b/index.html
@@ -2,50 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Practice: Colspan & Rowspan -Product Price List</title>
-  </head>
-  <body>
- <table border="1" cellpadding="15" cellspacing="0" >
-  <caption>Product Price List</caption>
-      <tr>
-        <th rowspan="2">Category</th>
-        <th rowspan="2">Product Name</th>
-        <th colspan="2">Price</th>
-      </tr>
-      <tr>
-        <th>Wholesale</th>
-        <th>Retail</th>
-      </tr>
+   <table border="1" cellpadding="10" cellspacing="10" >
+    <tr>
+        <th>Student Name</th>
+        <th>Math</th>
+        <th>English</th>
+        <th>Science</th>
+        <th>Computer</th>
+        <th>Total Attendance</th>
+    </tr>
+    <tr>
+        <td>Ali</td>
+        <td>p</td>
+        <td>P</td>
+        <td>A</td>
+        <td>A</td>
+        <td>2</td>
+    </tr>
+   
 
-      <tr>
-        <td rowspan="2">Electronics</td>
-        <td rowspan="2"> Mobile phone <br>Laptop</td>
-        <td rowspan="2">25000 <br>800000</td>
-    
-      </tr>
-      <tr>
-        <td rowspan="2">28000 <br>900000</td>
-        </td>
-      </tr>
+    <tr>
+        <td>Mehwish</td>
+        <td>p</td>
+        <td>p</td>
+        <td>p</td>
+        <td>p</td>
+        <td>4</td>
+    </tr>
 
-      <tr>
-        <td rowspan="2">Furniture</td>
-        <td rowspan="2">Chair <br>table</td>
-        <td rowspan="2">2000 <br>4000</td>
-      </tr>
-      <tr>
-        <td rowspan="2">2500 <br>5000</td>
-      </tr>
+    <tr>
+        <td>Farhan</td>
+        <td>A</td>
+        <td>p</td>
+        <td>P</td>
+        <td>A</td>
+        <td>2</td>
+    </tr>
+    <tr>
+        <td>Fatima</td>
+        <td>A</td>
+        <td>p</td>
+        <td>P</td>
+        <td>A</td>
+        <td>2</td>
+    </tr>
+    <tr>
+        <td>Hamdan</td>
+        <td>A</td>
+        <td>p</td>
+        <td>P</td>
+        <td>A</td>
+        <td>2</td>
+    </tr>
     </table>
-  </body>
-</html>
-```
 </body>
 </html>
